--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,93 @@
 @import url(normalize.css);
 @import url(reset.css);
 
+
+
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: #f5f5f5;
+  font-family: "ubuntu" ;
   
+
+  background-color: #f5f5f5;
+
   height: 100vh;
   display: grid;
-  grid-template-rows:20% 80%; ;
+  grid-template-rows: 1fr 1fr;
+  place-items: center;
+}
+h4{
+  font-weight: 500;
+}
+.main__btn{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+a{
+  display: inline-block;
+  border: solid 1px black;
+  border-radius: 15px;
+  padding: 10px;
+  width: 200px;
+  margin-top: 10px;
+}
+li{
+  margin-top: 10px;
 }
 
+.span__ia{
+  display: inline-block;
+  
+}
 
+header {
+  display: flex;
+  justify-content: flex-start;
+  gap: 50px;
+  align-self: self-end;
+  margin-bottom: 10px;
+  width: 1340px;
+}
+.header > .header__moneda {
+  margin-left: auto;
+}
+.main {
+  display: flex;
+  align-self: self-start;
+  gap: 20px;
+}
+.card {
+  border: solid 1px black;
+}
 
+.card-free {
+  border-radius: 10px;
+  padding: 20px;
+  height: auto;
+  width: 320px;
 
+  
+}
 
-.card-free{
-    background-color: #e0f7fa;
-    border: 2px solid #00bcd4;
-    border-radius: 10px;
-    padding: 20px;
-    height: auto;
-    width: 250px;
+.card-plus {
+  background-color: bisque;
+  border-radius: 10px;
+  padding: 20px;
+  height: auto;
+  width: 320px;
+}
+
+.card-business {
+  background-color: lightgray;
+  border-radius: 10px;
+  padding: 20px;
+  height: auto;
+  width: 320px;
+}
+
+.card-enterprise {
+  background-color: lightcoral;
+  border-radius: 10px;
+  padding: 20px;
+  height: auto;
+  width: 320px;
 }
